--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.10.1",
+    "@nuxtjs/proxy": "^1.3.3",
     "cross-env": "^5.2.0",
-    "express": "^4.16.4",
     "element-ui": "^2.4.11",
-    "@nuxtjs/axios": "^5.3.6"
+    "express": "^4.16.4",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
