--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.10.1",
-    "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/axios": "^5.3.6",
+    "connect-mongo": "^3.2.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
+    "highlight.js": "^10.0.0",
+    "marked": "^1.0.0",
+    "mongoose": "^5.9.18",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
+    "@nuxtjs/proxy": "^1.3.3",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "nodemon": "^1.18.9",
     "vue-jest": "^4.0.0-0"
   }
 }
